VFS-3108 Bigger toggles and toggle vertical alignment fix.

--- a/src/app/styles/cluster-host-table.scss
+++ b/src/app/styles/cluster-host-table.scss
@@ -4,6 +4,9 @@
   &:not(.bt) {
     .toggle-column {
       width: 15%;
+      .one-way-toggle{
+        font-size: 1.2em;
+      }
     }
   }
 
